@@ -3,6 +3,10 @@ This file is a translation of the main russian changelog and is provided by volu
 It might not always be as up to date as the main changelog.
 =======================================================================================
 
+drkns 15.11.2018 07:37:31 +0000 - build 5316
+
+1. And FastFind again.
+
 drkns 15.11.2018 00:53:53 +0000 - build 5315
 
 1. And once more.
